--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,86 +40,97 @@
                     android:layout_height="match_parent">
 
                     <com.flaviofaria.kenburnsview.KenBurnsView
-                        android:id="@+id/image_weather"
+                        android:id="@+id/image_planet"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
                         android:src="@drawable/zemlya_solntse_planeta_poverkhnost_zvezdy_99478_1920x1080"/>
 
+
                     <LinearLayout
                         android:id="@+id/open_weather_forecast"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="#8d333333"
                         android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/weather_name_t"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="#8d333333"
-                            android:gravity="center_horizontal"
+                            android:gravity="center"
                             android:text="@string/city"
                             android:textColor="@android:color/white"
-                            android:textSize="30sp"
+                            android:textSize="25sp"
                             />
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="#8d333333"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:id="@+id/weather_wind_speed"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="8dp"
-                                android:layout_weight="5"
-                                android:gravity="start"
-                                android:text="@string/wind_speed_humidity"
-                                android:textColor="@android:color/white"
-                                android:textSize="15sp"
-                                />
-
-                            <ImageView
-                                android:id="@+id/weather_image"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_weight="5"
-                                app:srcCompat="@drawable/ic_wb_sunny_white_24dp"/>
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="#8d333333"
+                            android:layout_height="match_parent"
                             android:orientation="horizontal"
-                            >
+                            android:baselineAligned="false">
 
-                            <TextView
-                                android:id="@+id/weather_pressure"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="8dp"
-                                android:layout_weight="5"
-                                android:gravity="start"
-                                android:text="@string/presssure"
-                                android:textColor="@android:color/white"
-                                android:textSize="15sp"
-                                />
-
-                            <TextView
-                                android:id="@+id/weather_sunrise"
-                                android:layout_width="match_parent"
+                            <LinearLayout
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="5"
-                                android:gravity="center_horizontal"
-                                android:text="Sunrise,sunset"
-                                android:textColor="@android:color/white"
-                                android:textSize="15sp"/>
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/weather_wind_speed"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="8dp"
+                                    android:gravity="start"
+                                    android:text="@string/wind_speed"
+                                    android:textColor="@android:color/white"
+                                    android:textSize="15sp"
+                                    />
+                                <TextView
+                                    android:id="@+id/weather_humidity"
+                                    android:text="@string/humidity"
+                                    android:textSize="15sp"
+                                    android:textColor="@android:color/white"
+                                    android:layout_marginStart="8dp"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"/>
+
+                                <TextView
+                                    android:id="@+id/weather_pressure"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="8dp"
+                                    android:layout_weight="4"
+                                    android:gravity="start"
+                                    android:text="@string/presssure"
+                                    android:textColor="@android:color/white"
+                                    android:textSize="15sp"
+                                    />
+
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="4"
+                                android:orientation="vertical"
+                                >
+                                <ImageView
+                                    android:id="@+id/weather_image"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="0dp"
+                                    android:layout_weight="4"
+                                    app:srcCompat="@drawable/ic_wb_sunny_white_24dp"/>
+                                <TextView
+                                    android:id="@+id/weather_sunrise"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="0dp"
+                                    android:layout_weight="2"
+                                    android:gravity="center_horizontal"
+                                    android:text="Sunrise,sunset"
+                                    android:textColor="@android:color/white"
+                                    android:textSize="15sp"/>
+                            </LinearLayout>
                         </LinearLayout>
-
                     </LinearLayout>
                 </RelativeLayout>
 
