--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- "Mark Favorite", should appear as action button if possible -->
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
     <!-- "Mark Favorite", should appear as action button if possible -->
-    <menu xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:app="http://schemas.android.com/apk/res-auto">
-        <!-- "Mark Favorite", should appear as action button if possible -->
-        <item
-            android:id="@+id/action_search"
-            android:icon="@drawable/ic_search_black_24dp"
-            android:title="@string/search"
-            app:showAsAction="ifRoom|collapseActionView"
-            app:actionViewClass="android.support.v7.widget.SearchView"/>
-        <item
-            android:id="@+id/action_settings"
-            app:showAsAction="never"
-            android:title="@string/action_settings"/>
-    </menu>
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_search_black_24dp"
+        android:title="@string/search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView"/>
+    <item
+        android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_charts"
+        android:title="@string/weather_forecast"
+        app:showAsAction="never"/>
+</menu>
 
